--- a/.env
+++ b/.env
@@ -7,3 +7,10 @@ JWT_SECRET=secreto
 # Prisma supports the native connection string format for PostgreSQL, MySQL, SQLite, SQL Server, MongoDB and CockroachDB.
 # See the documentation for all the connection string options: https://pris.ly/d/connection-strings
 
+POSTGRES_URL="postgres://default:evYlcBAyV34D@ep-weathered-pine-72456224-pooler.us-east-1.postgres.vercel-storage.com:5432/verceldb"
+POSTGRES_PRISMA_URL="postgres://default:evYlcBAyV34D@ep-weathered-pine-72456224-pooler.us-east-1.postgres.vercel-storage.com:5432/verceldb?pgbouncer=true&connect_timeout=15"
+POSTGRES_URL_NON_POOLING="postgres://default:evYlcBAyV34D@ep-weathered-pine-72456224.us-east-1.postgres.vercel-storage.com:5432/verceldb"
+POSTGRES_USER="default"
+POSTGRES_HOST="ep-weathered-pine-72456224-pooler.us-east-1.postgres.vercel-storage.com"
+POSTGRES_PASSWORD="evYlcBAyV34D"
+POSTGRES_DATABASE="verceldb"
